--- a/src/app.html
+++ b/src/app.html
@@ -1,12 +1,24 @@
 <!doctype html>
-<html lang="ru">
+<html class="no-js" lang="ru">
 	<head>
 		<meta charset="utf-8" />
-		<link rel="icon" href="%sveltekit.assets%/favicon.png" />
-		<meta name="viewport" content="width=device-width, initial-scale=1" />
+		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+		<link rel="shortcut icon" type="image/x-icon" href="/assets/images/favicon.png">
+		
 		%sveltekit.head%
+
+		<link rel="stylesheet" href="/assets/css/main.css">
+
 	</head>
 	<body data-sveltekit-preload-data="hover">
-		<div style="display: contents">%sveltekit.body%</div>
+		<div style="display: contents">
+			<div style="main-wrapper">
+				%sveltekit.body%
+			</div>
+		</div>
+
+		<!-- Main JS -->
+		<script type="module" src="/assets/js/main.js"></script>  
 	</body>
 </html>
